--- a/week31/week31/Views/ShopItems/Index.cshtml
+++ b/week31/week31/Views/ShopItems/Index.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.Class)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ImageURL)
+            <img src="@Url.Content(item.ImageURL)" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
